<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranjaClaro"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/blancomesatrabajo"/>

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_olvidasteContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:backgroundTint="@color/naranjaClaro"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/contraOlvidada"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/iniciaSesion"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_crearCuenta"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/creaCuenta"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>