<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/naranjaClaro"
    android:fitsSystemWindows="true"
    tools:context=".Activities.RegistroActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:fontFamily="@font/inter_bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="143dp"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/input_correo"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/correo"
        android:fontFamily="@font/inter_regular"
        android:layout_marginBottom="25dp"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:fontFamily="@font/inter_regular"
        android:layout_marginBottom="25dp" />

    <EditText
        android:id="@+id/inpud_verify_password"
        android:layout_width="295dp"
        android:layout_height="40dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/verifyPassword"
        android:fontFamily="@font/inter_regular"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/tv_invalidpass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_regular"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/grisClaro"
        android:layout_marginBottom="25dp" />

    <Button
        android:id="@+id/btn_crear"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:text="@string/crearCuenta"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/white"
        android:textAllCaps="false" />


</LinearLayout>