<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranjaClaro"
    android:orientation="vertical"
    tools:context=".Activities.MenuActivity">

    <TextView
        android:id="@+id/tv_nombreMesaCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/inter_regular"
        android:textSize="15sp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtMenu"
        android:fontFamily="@font/inter_bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="40dp">

        <ImageView
            android:id="@+id/iv_entradas"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:src="@drawable/entradas"/>

        <ImageView
            android:id="@+id/iv_rollos"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="55dp"
            android:src="@drawable/rollos"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/entradas"
            android:textSize="15sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="60dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/rollos"
            android:textSize="15sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="85dp"/>

        <ImageView
            android:id="@+id/iv_platillos"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:src="@drawable/platillos"/>

        <ImageView
            android:id="@+id/iv_extras"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="55dp"
            android:src="@drawable/extras"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/platillos"
            android:textSize="15sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="63dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/extras"
            android:textSize="15sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="85dp"/>

        <ImageView
            android:id="@+id/iv_postres"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="40dp"
            android:src="@drawable/postres"/>

        <ImageView
            android:id="@+id/iv_bebidas"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="55dp"
            android:src="@drawable/bebidas"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/postres"
            android:textSize="15sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="63dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/bebidas"
            android:textSize="15sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="78dp"/>

    </GridLayout>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:text="@string/regresar"
        android:fontFamily="@font/inter_semibold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>