<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/naranjaClaro"
    tools:context=".Activities.NuevaMesa">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNuevaMesa"
        android:fontFamily="@font/inter_bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"/>

    <Spinner
        android:id="@+id/spinner_numero_mesa"
        android:layout_width="249dp"
        android:layout_height="40dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:textSize="17sp"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_regular"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:entries="@array/numbers" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtAbrirCuentas"
        android:fontFamily="@font/inter_semibold"
        android:textSize="17sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"/>

    <ImageView
        android:id="@+id/iv_cuenta"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/cuenta"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtUnaCuenta"
        android:fontFamily="@font/inter_regular"
        android:textSize="15sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <ImageView
        android:id="@+id/iv_varias_cuentas"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="5dp"
        android:src="@drawable/variascuentas"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtVariasCuentas"
        android:fontFamily="@font/inter_regular"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:text="@string/regresar"
        android:fontFamily="@font/inter_semibold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp" />
</LinearLayout>