<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_principal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranjaClaro"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Activities.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/naranja"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:contentDescription="@string/profile_photo"
            android:src="@drawable/profile_photo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tituloMenuPpal"
            android:fontFamily="@font/inter_bold"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tituloMenuPpal"
            android:fontFamily="@font/inter_bold"
            android:textSize="22sp"
            android:textColor="@color/white"
            android:gravity="center"/>

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_cerrarSesion"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/cerrarSesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_ordenar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ordenar"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ordenar"
        app:maxImageSize="56dp"
        app:backgroundTint="@color/naranja"/>
</LinearLayout>
