<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/naranjaClaro"
    android:fitsSystemWindows="true"
    tools:context=".Activities.MenuOrdenarActivity">

    <Spinner
        android:id="@+id/spinner_numero_mesa"
        android:layout_width="249dp"
        android:layout_height="40dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:background="@drawable/custom_input"
        android:textSize="17sp"
        android:layout_gravity="center"
        android:fontFamily="@font/inter_regular"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="5dp"
        android:entries="@array/numbers" />

    <EditText
        android:id="@+id/et_nombre_orden"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="17sp"
        android:fontFamily="@font/inter_regular"
        android:background="@drawable/custom_input"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/txtNombreCuenta"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/btn_ordenar"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:text="@string/ordenar"
        android:fontFamily="@font/inter_semibold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:text="@string/regresar"
        android:fontFamily="@font/inter_semibold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp" />


</LinearLayout>