<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/naranjaClaro"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".Activities.DetalleOrdenActivity">

    <TextView
        android:id="@+id/tv_num_mesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtNoMesa"
        android:fontFamily="@font/inter_bold"
        android:textSize="22sp"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="30dp"/>

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="500dp"
        android:layout_gravity="center"
        android:background="@drawable/round_view"
        android:backgroundTint="@color/amarillento"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
            <GridView
                android:id="@+id/platillos_orden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:numColumns="1"
                android:paddingHorizontal="6dp"/>
        </LinearLayout>


    <TextView
        android:id="@+id/total_orden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_bold"
        android:text="Total: 1200"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btn_enviar_orden"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/round_button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/enviarPedido"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btn_atras"
        android:layout_width="219dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/regresar"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>